Implemented the UI for the ssecond section of the landing page

--- a/index.html
+++ b/index.html
@@ -47,6 +47,39 @@
                     <img src="./assets/Image.png">
                 </div>
             </div>
+            <div class="row1">
+                <div class="row141">
+                    <div class="row14">
+                        <div class="card1">
+                            <div class="card1-img"><img src="./assets/001-growth.png"></div>
+                            <h4>We have a high success rate,<br> envied by many of our<br> competitors. In fact we are proud<br> to act for a number of other debt<br> collection agencies as the final<br> step when they failed to collect<br> themselves.</h4>
+                        </div>
+                        <div class="card2">
+                            <div class="card2-img"><img src="./assets/Path.png"></div>
+                            <h4>Our modern computer technology<br> has direct access to up-to-date<br> credit information systems, which<br> enables us to investigate the profile<br> of your debtors more thoroughly,<br> thus ensuring the best course of<br>                                debt collection action is taken for<br> each and every account.</h4>
+                        </div>
+                        <div class="card3">
+                            <div class="card3-img"><img src="./assets/Group4.png"></div>
+                            <h4>We buy your debt, and incur<br> the full cost of collecting. This<br> is how we stand out from the<br> rest.</h4>
+                        </div>
+                    </div>
+                    <div class="button2">
+                        <img src="./assets/button1.png">
+                        <h4>Hire Us</h4>
+                    </div>
+                </div>
+                <div class="overlay">
+                    <div class="row12">
+                        <img src="./assets/Group8.png">
+                        <h5>Why Procredita</h5>
+                    </div>
+                    <div class="row13">
+                        <h6>Dealing with debtors can be very stressful for clients, not to mention the<br> time it can take to recover the debt.<br> At Procredita, we help to take the stress away from business owners and<br> allow them to refocus their attention
+                            back on what they do best, growing<br> their business.<br><br>Procredita, offers a range of different debt collection services including our<br> “value for cash” service. This means that if debtors are truly unable to pay<br>                            back, they can provide value for the monies owed, by working for it.<br><br>We work with businesses of all types and sizes, from start-ups through to<br> large corporate companies who operate in a multitude of different<br>                            industries. Our specialist team are able to adapt to the needs of each client<br> and are skilled in the art of negotiation. We pride ourselves on our<br> professionalism and how we handle our cases. Where possible, we will<br>                            always attempt to resolve cases through negotiation, however, should you<br> need to pursue the legal option, we can help.</h6>
+                        <img src="./assets/Group3.png">
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <footer>
