Updating the landing page

--- a/index.html
+++ b/index.html
@@ -79,6 +79,79 @@
                         <img src="./assets/Group3.png">
                     </div>
                 </div>
+                <div class="row2">
+                    <div class="row21">
+                        <img src="./assets/Group8.png">
+                        <h5>Own a Procredita Regional Franchise</h5>
+                    </div>
+                    <div class="row22">
+                        <div class="background-image">
+                            <div class="Image1">
+                                <img src="./assets/shutterstock_516827383-edit.png">
+                            </div>
+                            <div class="Image2">
+                                <img src="./assets/Group84.png">
+                            </div>
+                        </div>
+                        <div class="row2-text">
+                            <h6>We are inviting interested individuals and entities across<br>Nigeria to help achieve our objective and earn while doing so<br>by owning a Bawopada franchise. This allows you to collect<br>debt on our behalf in your region
+                                and earn a 25% commission<br>on debt recovered. We provide the training and information<br>that allows you to effectively recover debt from debtors in your<br>area<br><br>The Bawopada Regional Franchise (BRF) Licence varies
+                                from
+                                <br>N750,000 to N2,000,000 depending on your location, with<br>Lagos State being the highest based off volume of debt to be<br>recovered per region.<br><br>The average "debt to be recovered" (DBR) a BRF licence<br>operator
+                                is entitled per year is N150M with 25% of successfully<br>recovered debt as commission for the operator.<br><br>Our license are available for all parts of Nigeria except Borno,<br>Zamfara and Bayelsa State.</h6>
+                            <h3>Become a Debt Collection Manager</h3>
+                            <div class="button3">
+                                <img src="./assets/button1.png">
+                                <h4>Signup</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row3">
+                    <div class="row31">
+                        <h2>
+                            We are partnered with several major financial institutions and businesses in<br>Nigeria. <span>Procredita</span> is your trusted partner in efficient debt recovery. We get<br>the job done.
+                        </h2>
+                        <h5>Why not try us today?</h5>
+                        <div class="button4">
+                            <img src="./assets/Path2.png">
+                            <h4>Hire Us</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="row4">
+                    <div class="row21">
+                        <h5>Hear from some of our clients</h5>
+                    </div>
+                    <div class="profile-card">
+                        <div class="profile-card1">
+                            <div class="profile-card12">
+                                <h5>I never believed I could get my 3.5 Million naira<br>back until Procredita stepped in and even<br>collected the interest from the debtor.</h5>
+                                <img src="./assets/Avator.png">
+                            </div>
+                        </div>
+                        <div class="profile-card2">
+                            <div class="profile-card12">
+                                <h5>I never believed I could get my 3.5 Million naira<br>back until Procredita stepped in and even<br>collected the interest from the debtor.</h5>
+                                <img src="./assets/Avator1.png">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="profile-card">
+                        <div class="profile-card1">
+                            <div class="profile-card12">
+                                <h5>I never believed I could get my 3.5 Million naira<br>back until Procredita stepped in and even<br>collected the interest from the debtor.</h5>
+                                <img src="./assets/Avator2.png">
+                            </div>
+                        </div>
+                        <div class="profile-card2">
+                            <div class="profile-card12">
+                                <h5>I never believed I could get my 3.5 Million naira<br>back until Procredita stepped in and even<br>collected the interest from the debtor.</h5>
+                                <img src="./assets/Avator3.png">
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
