Implemeting the UI for the footer section

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="profile-card">
+                    <div class="profile-card" style="margin-left: 111px;">
                         <div class="profile-card1">
                             <div class="profile-card12">
                                 <h5>I never believed I could get my 3.5 Million naira<br>back until Procredita stepped in and even<br>collected the interest from the debtor.</h5>
@@ -156,7 +156,51 @@
         </div>
     </div>
     <footer>
-
+        <div class="footer-img"><img src="./assets/iloilostreetsnorth.png"></div>
+        <div class="footer-section">
+            <div class="footer-section1">
+                <img src="./assets/largelogo.png" style="margin-bottom:24px;"> <br>
+                <img src="./assets/Group5.png">
+            </div>
+            <div class="footer-section2">
+                <h4>Company</h4>
+                <ul>
+                    <li><a href="">Why procredita</a></li>
+                    <li><a href="">FAQ</a></li>
+                    <li><a href="">Loan terms</a></li>
+                    <li><a href="">Apply Now</a></li>
+                    <li><a href="">Contact Us</a></li>
+                    <li><a href="">Login</a></li>
+                </ul>
+            </div>
+            <div class="footer-section3">
+                <h4>Legal</h4>
+                <ul>
+                    <li><a href="">Cookies Policy</a></li>
+                    <li><a href="">Privacy Policy</a></li>
+                </ul>
+            </div>
+            <div class="footer-section4">
+                <div class="footer-section41">
+                    <img src="./assets/CombinedShape.png">
+                    <h5>1686 Oladele Olashore Street,<br>Off Sanusi Fafunwa Street,<br>Victoria Island, Lagos.</h5>
+                </div>
+                <div class="footer-section42">
+                    <img src="./assets/Group25.png">
+                    <h5>+ (234) 814 7630 499</h5>
+                </div>
+                <div class="footer-section43">
+                    <img src="./assets/Group28.png">
+                    <h5>info@procredita.com</h5>
+                </div>
+            </div>
+        </div>
+        <div class="last-footer">
+            <h5><span>This website uses cookies</span><br> We use cookies to personalise content and ads, to provide social media features and to analyse our traffic. We also share information about your use of<br> our site with our social media, advertising
+                and analytics partners who may combine it with other information that you’ve provided to them or that<br>they’ve collected from your use of their services. <span>Check Privacy Policy</span>.
+            </h5>
+            <h6>&copy;Procredita 2020, all rights reserved</h6>
+        </div>
     </footer>
 </body>
 
